# EulerMind

./: .gitignore  CLAUDE.md  DO_NOT_BUILD.md  README.md  WIN.md  pyproject.toml  run_demo.sh  scoreboard.md
app/: answer_checker.py  local_demo.py  reality_check.py  tutor.py
benchmark/: __init__.py  metrics.py  runner.py  schema.py  selftest.py
competition/: ASSUMPTION_REGISTER.md  DEVPOST_STORY.md  EVAL_GUARDRAIL_HARNESS_PRD.md  FINAL_AUDIT_PROMPT.md  FINAL_SUBMISSION_AUDIT.md  GAP_ANALYSIS.md  JUDGE_WALKTHROUGH.md  MODEL_CANDIDATES.md  MODEL_DECISION.md  ORGANIZER_EMAIL_DRAFT.md  PRODUCTION_SETUP.md  PROMPT_STRATEGY.md  README.md  RED_TEAM_REVIEW.md  SIGMA2_TUTOR_EXPERIENCE_LOCK.md  SUBMISSION_BURNDOWN.md  SUBMISSION_CHECKLIST.md  TARGETS.md  VIDEO_SCRIPT.md  WINNING_STORY.md  accuracy_results_ci_28684426883.json  holdout_waec_realworld_dev_transcript.md  reality_check_transcript.md  score_model.py  select_model.py  smoke_submission_report_ci_28683560689.json
demo/: README.md  actual_output.md  expected_output.md  lp_scene.md  prompt.md  speaker_notes.md
docs/: EVIDENCE_PROTOCOL.md  EXECUTION_CONTRACT.md  LOGGING.md  SCIENTIFIC_STATE.md  SCORING.md  VISION.md
future/: FOUNDER_CONSTITUTION.md  README.md
holdout/: waec_realworld_dev.txt
kernel/: __init__.py  api.py  csp_attempters.py  csp_formalizer.py  csp_solver.py  edge_ai.py  edge_ai_extractors.py  edge_ai_formalizer_1b.py  edge_ai_parser.py  edge_ai_solver.py  loop.py  lp_formalizer.py  lp_solver.py  oracle.py  policy.py  state.py
research/: README.md  edge_ai_family_decision.md
(+156 files in other folders)
